ci: Change branch for unit tests workflow

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -2,7 +2,7 @@ name: Unit Tests with Excel Report (Functions + Statistics + Matrices)
 
 on:
   push:
-    branches: [devphuctrann]
+    branches: [unit-test]
 
 jobs:
   test:
