--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -228,13 +228,21 @@ jobs:
           
                   for m in root.findall('.//member'):
                       name = m.get('name','')
-                      if not name.startswith('M:'): continue
-                      if not name.startswith(XML_PREFIX): continue
+                      print(f"Processing XML member name: {name}")
+                      if not name.startswith('M:'): 
+                          print(f"Skipping {name}: Does not start with M:")
+                          continue
+                      if not name.startswith(XML_PREFIX): 
+                          print(f"Skipping {name}: Does not start with XML_PREFIX ({XML_PREFIX})")
+                          continue
                       parts = name.split('.')
-                      if len(parts) < 2: continue
+                      if len(parts) < 2: 
+                          print(f"Skipping {name}: Not enough parts after splitting by '.'")
+                          continue
                       cls = parts[-2]
                       test_method = strip_params(parts[-1])
                       func = base_function_from_test(test_method)
+                      print(f"Extracted: Class={cls}, Test Method={test_method}, Function={func}")
 
                       desc = ''
                       pre  = ''
@@ -276,7 +284,7 @@ jobs:
               for ut in soup.find_all('UnitTest'):
                   total_unit_tests += 1
                   ut_id = ut.get('id') or ut.get('testId')
-                  tm = ut.find('TestMethod')
+                  tm = ut.find('TestMethod');
                   if not ut_id or tm is None: 
                       print(f"Skipping UnitTest: id={ut_id}, tm_found={tm is not None}")
                       continue
@@ -325,9 +333,9 @@ jobs:
           
               for t in trx:
                   matched = False
-                  for f in funcs:
-                      if same_function(f["Function"], t["Base"]) and f["Class"] == t["Class"]:
-                          idx[(f["Class"], f["Function"])].append(t)
+                  for f_existing in funcs: # Renamed loop variable to avoid shadowing
+                      if same_function(f_existing["Function"], t["Base"]) and f_existing["Class"] == t["Class"]:
+                          idx[(f_existing["Class"], f_existing["Function"])].append(t)
                           matched = True
                           break
           
@@ -358,6 +366,7 @@ jobs:
               print(f"\nTotal functions after processing: {len(funcs)}")
               print(f"Total test results from parse_trx: {len(trx)}")
               print(f"Total tests indexed (should match total test results): {sum(len(tests) for tests in idx.values())}")
+              print(f"Number of functions before creating DataFrame: {len(funcs)}") # Added this line
 
               print(f"\nUnmatched tests: {len(unmatched_tests)}")
               if unmatched_tests:
@@ -367,7 +376,7 @@ jobs:
           
               # Verify total test count
               total_indexed = sum(len(tests) for tests in idx.values())
-              print(f"\nTotal tests indexed: {total_indexed} (should be {len(trx)})")
+              print(f"Total tests indexed: {total_indexed} (should be {len(trx)})")
           
               # Sheet 1: Functions
               func_rows=[]
