ci: Update unit test workflow XML prefix

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -71,7 +71,7 @@ jobs:
           from collections import defaultdict
           import glob, re
 
-          XML_PREFIX = "M:BlindTreasure.UnitTest.Services."
+          XML_PREFIX = "M:BlindTreasure.Application."
 
           # ---------- helpers ----------
           def strip_params(s): return s.split('(')[0] if s else s
